fix column spacing issues

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   display: grid;
   grid-template-columns: repeat(20, calc(5% - 1em));
   width: 100vw;
-  height:100vh;
+  height: 100vh;
   grid-template-rows: repeat(20, calc(5% - 1em));
   gap: 1rem;
   padding: 1rem;
@@ -154,7 +154,7 @@ h6 {
 
 /* Account widget */
 #account {
-  grid-column: 1/6;
+  grid-column: 1/7;
   grid-row: 1/18;
 }
 #account > img {
@@ -172,7 +172,7 @@ h6 {
   display: inline-flex;
   align-items: center;
   justify-content: space-around;
-  grid-column:6/12;
+  grid-column: 7/13;
   grid-row: 7/10;
 }
 #weather > button {
@@ -192,7 +192,7 @@ h6 {
 
 /* Payment Widget */
 #payment {
-  grid-column: 6/12;
+  grid-column: 7/13;
   grid-row: 1/7;
 }
 #payment i {
@@ -221,7 +221,7 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  grid-column: 1/6;
+  grid-column: 1/7;
   grid-row: 18/21;
 }
 #current i,
@@ -239,8 +239,8 @@ h6 {
   justify-content: center;
   align-items: center;
   position: relative;
-  grid-column:6/12;
-  grid-row:10/21;
+  grid-column: 7/13;
+  grid-row: 10/21;
 }
 #time div {
   background-color: var(--offwhite);
@@ -268,18 +268,22 @@ h6 {
 }
 
 /* Health Widget */
-#glucose, #pressure {
-  grid-column: 12/16;
+#glucose,
+#pressure {
+  grid-column: 13/17;
 }
 
-#temperature, #sleep {
-  grid-column: 16/20;
+#temperature,
+#sleep {
+  grid-column: 17/21;
 }
-#glucose, #temperature{
-  grid-row:1/9;
+#glucose,
+#temperature {
+  grid-row: 1/9;
 }
-#pressure, #sleep {
-  grid-row:9/18;
+#pressure,
+#sleep {
+  grid-row: 9/18;
 }
 .health-widget > .main-icon {
   color: var(--brown);
@@ -304,8 +308,8 @@ h6 {
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  grid-column: 12/20;
-  grid-row:18/21;
+  grid-column: 13/21;
+  grid-row: 18/21;
 }
 #upload > span:nth-of-type(1) {
   display: inline-block;
